# osu-gallery

./: .gitignore  CHANGELOG.md  README.md  build.ps1  new_project.ps1  pyproject.toml  requirements.txt
osu_gallery/: __init__.py  __main__.py  _constants.py  _logging.py
project_docs/: 00_README.md  01_Product.md  02_System_Design.md  03_Technical_Architecture.md  04_Implementation_Roadmap.md  04_Implementation_Roadmap_2.md  04_Implementation_Roadmap_3.md  04_Implementation_Roadmap_4.md  04_Implementation_Roadmap_5.md  04_Implementation_Roadmap_6.md  04_Implementation_Roadmap_7.md  04_Implementation_Roadmap_8.md  05_AI_Collaboration_Rules.md  06_Decision_Log.md  07_AI_Context_Brief.md  08_Glossary.md  09_Security.md  10_Testing_Strategy.md  11_Contributing.md  12_Coding_Standards.md  13_Bugfix_and_Refactor_Backlog.md  TEMPLATE.md  new_project.sh
tests/: __init__.py  conftest.py  test_database.py  test_edit_and_layout.py  test_image_drop_target.py  test_import_text_normalizer.py  test_packaging.py  test_parser.py  test_phase6_copy_clipboard.py  test_phase7_preview_pane.py  test_phase9_logging.py  test_preview_integration.py  test_real_osu_integration.py  test_real_osu_parser.py  test_roadmap3_combo_order.py  test_roadmap3_metadata.py  test_roadmap3_object_tags.py  test_roadmap3_search_suggestions.py  test_roadmap3_sizes.py  test_roadmap4_mapping_tags_preview.py  test_roadmap4_miniature_match.py  test_roadmap4_object_visibility.py  test_roadmap4_pattern_tags_panel.py  test_roadmap4_sizes.py  test_roadmap4_tag_picker.py  test_roadmap4_user_images.py  test_search.py  (+9 more)
(+26 files in other folders)
